Add images and cards.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,46 @@
   <title>Document</title>
 </head>
 <body>
-  
+  <div class="container">
+
+    <div class="card">
+      <div class="imgDiv">
+        <img src="./images/hawaii.jpg" alt="mountains in Hawaii">
+      </div>
+      <div class="content">
+        <h2>My Trip to Hawaii</h2>
+        <p>Hot chicken 8-bit chartreuse organic synth gluten-free cronut kombucha kogi shaman subway tile normcore. Pabst mlkshk heirloom freegan chartreuse. Keytar selvage cray, food truck franzen sustainable 90's bushwick. Hell of kogi marfa swag, glossier umami bushwick bitters migas meditation squid. Hexagon banjo lyft, tumblr leggings vape aesthetic.</p>
+      </div>
+    </div>
+
+    <div class="card">
+      <div class="imgDiv">
+        <img src="./images/puerto-vallarta.jpg" alt="A sign on the Puerto Vallarta boardwalk">
+      </div>
+      <div class="content">
+        <h2>A Long Weekend in Puerto Vallarta</h2>
+        <p>Tumblr lomo lumbersexual PBR&B post-ironic actually fixie YOLO tattooed messenger bag etsy single-origin coffee. Chicharrones irony gastropub, iPhone occupy swag cold-pressed vape health goth jean shorts actually narwhal. XOXO heirloom 90's shabby chic you probably haven't heard of them PBR&B brooklyn viral selfies put a bird on it fingerstache live-edge twee bushwick.</p>
+      </div>
+    </div>
+
+    <div class="card">
+      <div class="imgDiv">
+        <img src="./images/japan.jpg" alt="A busy crosswalk in Japan">
+      </div>
+      <div class="content">
+        <h2>Living in Japan</h2>
+        <p>Viral cloud bread fam mustache, raw denim man bun brunch franzen chia retro. Kombucha chia man bun literally bushwick intelligentsia freegan. Cronut fixie pabst helvetica. Thundercats pickled tattooed crucifix pitchfork salvia artisan blog iceland heirloom 8-bit microdosing. Portland paleo jianbing tilde cardigan four dollar toast deep v. Twee heirloom 90's cornhole etsy.</p>
+      </div>
+    </div>
+
+  </div>
+  <footer>
+    <p>&copy; Brittany Lindgren</p>
+    <div class="credits">
+      <span>Photo of Hawaii by <a href="https://unsplash.com/@zmart?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Martin Zangerl</a> on <a href="https://unsplash.com/s/photos/hawaii?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a></span>
+      <span>Photo of Puerto Vallarta by Brittany Lindgren</span>
+      <span>Photo of Japan by <a href="https://unsplash.com/@jezael?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Jezael Melgoza</a> on <a href="https://unsplash.com/s/photos/japan?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a></span>
+    </div>
+  </footer>
 </body>
 </html>
