--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       </div>
       <div class="content">
         <h2>My Trip to Hawaii</h2>
-        <p>Hot chicken 8-bit chartreuse organic synth gluten-free cronut kombucha kogi shaman subway tile normcore. Pabst mlkshk heirloom freegan chartreuse. Keytar selvage cray, food truck franzen sustainable 90's bushwick. Hell of kogi marfa swag, glossier umami bushwick bitters migas meditation squid. Hexagon banjo lyft, tumblr leggings vape aesthetic.</p>
+        <p>Hot chicken 8-bit chartreuse organic synth gluten-free cronut kombucha kogi shaman subway tile normcore. Pabst mlkshk heirloom freegan chartreuse.</p>
       </div>
     </div>
 
@@ -25,7 +25,7 @@
       </div>
       <div class="content">
         <h2>A Long Weekend in Puerto Vallarta</h2>
-        <p>Tumblr lomo lumbersexual PBR&B post-ironic actually fixie YOLO tattooed messenger bag etsy single-origin coffee. Chicharrones irony gastropub, iPhone occupy swag cold-pressed vape health goth jean shorts actually narwhal. XOXO heirloom 90's shabby chic you probably haven't heard of them PBR&B brooklyn viral selfies put a bird on it fingerstache live-edge twee bushwick.</p>
+        <p>Tumblr lomo lumbersexual PBR&B post-ironic actually fixie YOLO tattooed messenger bag etsy single-origin coffee.</p>
       </div>
     </div>
 
@@ -35,7 +35,7 @@
       </div>
       <div class="content">
         <h2>Living in Japan</h2>
-        <p>Viral cloud bread fam mustache, raw denim man bun brunch franzen chia retro. Kombucha chia man bun literally bushwick intelligentsia freegan. Cronut fixie pabst helvetica. Thundercats pickled tattooed crucifix pitchfork salvia artisan blog iceland heirloom 8-bit microdosing. Portland paleo jianbing tilde cardigan four dollar toast deep v. Twee heirloom 90's cornhole etsy.</p>
+        <p>Viral cloud bread fam mustache, raw denim man bun brunch franzen chia retro. Kombucha chia man bun literally bushwick intelligentsia freegan. Cronut fixie pabst helvetica.</p>
       </div>
     </div>
 
