--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@
     </div>
 
   </div>
-  <!-- <footer>
+  <footer>
     <p>&copy; Brittany Lindgren</p>
     <div class="credits">
       <span>Photo of Hawaii by <a href="https://unsplash.com/@zmart?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Martin Zangerl</a> on <a href="https://unsplash.com/s/photos/hawaii?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a></span>
       <span>Photo of Puerto Vallarta by Brittany Lindgren</span>
       <span>Photo of Japan by <a href="https://unsplash.com/@jezael?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Jezael Melgoza</a> on <a href="https://unsplash.com/s/photos/japan?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a></span>
     </div>
-  </footer> -->
+  </footer>
 </body>
 </html>
